change about color to avoid contrast issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -108,7 +108,7 @@ header h1 {
 }
 
 #about {
-	background: #fff;
+	background: #EAEAEA;
 	overflow: hidden;
 }
 
